--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
     "@mui/styled-engine-sc": "^7.3.2",
+    "dotenv": "^17.2.2",
     "next": "15.5.2",
+    "query-string": "^9.3.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "slugify": "^1.6.6",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
