--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
     "@mui/styled-engine-sc": "^7.3.2",
+    "@mui/x-data-grid": "^8.11.3",
+    "@mui/x-date-pickers": "^8.11.3",
+    "dayjs": "^1.11.18",
     "dotenv": "^17.2.2",
     "next": "15.5.2",
     "query-string": "^9.3.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-router": "^7.9.1",
     "slugify": "^1.6.6",
     "styled-components": "^6.1.19"
   },
